layout break fix

--- a/src/components/List.css
+++ b/src/components/List.css
@@ -6,7 +6,7 @@
     margin-top: 32px;
     padding: 0px 16px;
     max-width: 1920px;
-    width: 100vw;
+    width: 100%;
 }
 
 .list--item {
